# steerling

./: .env-template  .gitignore  .pre-commit-config.yaml  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/images/: embedding_decomposition.apng
jobs/: eval_task.sh  launch_all_evals.sh
logs/: eval_arc_challenge_71349.out  eval_arc_challenge_71356.out  eval_arc_challenge_71364.err  eval_arc_challenge_71364.out  eval_eval-piqa_71344.err  eval_gsm8k_71354.out  eval_gsm8k_71361.out  eval_gsm8k_71369.err  eval_gsm8k_71369.out  eval_hellaswag_71348.out  eval_hellaswag_71355.out  eval_hellaswag_71363.err  eval_hellaswag_71363.out  eval_mmlu_71353.out  eval_mmlu_71360.out  eval_mmlu_71368.err  eval_mmlu_71368.out  eval_openbookqa_71352.out  eval_openbookqa_71359.err  eval_openbookqa_71359.out  eval_openbookqa_71367.err  eval_openbookqa_71367.out  eval_piqa_71351.out  eval_piqa_71358.out  eval_piqa_71366.err  eval_piqa_71366.out  eval_winogrande_71350.out  eval_winogrande_71357.out  eval_winogrande_71365.err  eval_winogrande_71365.out
notebooks/: README.md  amplify.ipynb  amplify_concept.ipynb  amplify_concept_instruct.ipynb  chunk_attribution.ipynb  chunk_level_concept_attribution.ipynb  concept_attribution.ipynb  concept_attribution_dummy.ipynb  generation.ipynb  generation_instruct.ipynb  logit_contribution.ipynb  logit_contribution_instruct.ipynb  neologism_concept_prompt.ipynb  search_concepts.ipynb  simple_walk_through.ipynb  suppress.ipynb  suppress_concept.ipynb
notebooks/base_model/: amplify_concept.ipynb  chunk_level_concept_attribution.ipynb  feature_attribution.ipynb  generation.ipynb  logit_contribution.ipynb  suppress_concept.ipynb
notebooks/instruct_model/: amplify_concept_instruct.ipynb  chunk_level_concept_attribution_instruct.ipynb  feature_attribution_instruct.ipynb  generation_instruct.ipynb  logit_contribution_instruct.ipynb  suppress_concept_instruct.ipynb
scripts/: benchmark.py  build_hf_files.py  convert_weights.py  eval_steerling_lm_eval.sh  evaluate.py  upload_to_hf.py
scripts/hugging_face/: README.md  build_hf_files.py  upload_to_hf.py
steerling/: __init__.py  concepts.py
steerling/attribution/: __init__.py  concept_attribution.py  input_attribution.py  trace.py  utils.py
steerling/configs/: __init__.py  attribution.py  causal_diffusion.py  concept.py  (+3 more)
tests/: conftest.py  test_attribution.py  test_chunk_attribution.py  test_config.py  test_feature_attribution.py  test_generate.py  test_generation.py  test_model.py  test_tokenizer.py
(+16 files in other folders)
