[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steerling"]

[project]
name = "steerling"
description = "Steerling: An interpretable causal diffusion language model with concept steering"
version = "0.1.2"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "Guide Labs" },
]
keywords = ["language-model", "interpretability", "diffusion", "concept-steering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core inference dependencies
    "torch ~= 2.8.0",
    "triton >= 3.0.0",
    "tiktoken ~= 0.8.0",
    "safetensors >= 0.4.0",
    "huggingface-hub >= 0.20.0",
    "pydantic ~= 2.10.0",
    "numpy ~= 2.3.0",
]

# LM evaluation harness
[project.optional-dependencies]
eval = [
    "lm-eval ~= 0.4.0",
    "pandas ~= 2.2.3",
    "tqdm ~= 4.67.1",
]

# Notebook environment for analysis
notebook = [
    "jupyter ~= 1.1.1",
    "ipykernel ~= 6.29.5",
    "matplotlib ~= 3.9.2",
    "ipywidgets ~= 8.1.5",
    "seaborn ~= 0.13.2",
]

# Testing
test = [
    "pytest ~= 8.3.0",
]

# Development tools
dev-tools = [
    "pre-commit ~= 4.0.1",
    "ruff ~= 0.8.4",
    "ty",
]

# Everything for development
dev = [
    "steerling[eval]",
    "steerling[notebook]",
    "steerling[test]",
    "steerling[dev-tools]",
]

[project.urls]
Homepage = "https://github.com/guidelabs/steerling"
Repository = "https://github.com/guidelabs/steerling"

[tool.uv.sources]
# PyTorch with CUDA 12.8 (GPU only)
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pyright]
include = ["steerling", "tests", "scripts"]
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "NPY",    # NumPy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"
